Fixed build system so that it works with the Tornado SDK